--- a/.github/workflows/Snake.yml
+++ b/.github/workflows/Snake.yml
@@ -33,7 +33,7 @@ jobs:
     #       # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
     #       gif_out_path: dist/github-contribution-grid-snake.gif
     #       svg_out_path: dist/github-contribution-grid-snake.svg
-      - uses: Platane/snk/svg-only@v3
+      - uses: Platane/snk@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
